--- a/TL_Classifier-Carla.ipynb
+++ b/TL_Classifier-Carla.ipynb
@@ -96,7 +96,7 @@
     "for img_class, directory in enumerate(['red_Crop', 'yellow_Crop', 'green_Crop', 'none']):\n",
     "    for i, file_name in enumerate(glob.glob(\"{}/*.jpg\".format(directory))):\n",
     "        file = cv2.imread(file_name)\n",
-    "        file = cv2.cvtColor(file, cv2.COLOR_BGR2RGB);\n",
+    "        #file = cv2.cvtColor(file, cv2.COLOR_BGR2RGB);\n",
     "        resized = cv2.resize(file, (32,32))\n",
     "\n",
     "\n",
@@ -1302,24 +1302,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.3635009e-04, 4.9739196e-05, 9.9981397e-01, 1.7403500e-14]],\n",
+       "array([[2.0363713e-03, 2.5957369e-04, 9.9770409e-01, 1.6844688e-14]],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "file = cv2.imread('Green_test.jpg')\n",
-    "file = cv2.cvtColor(file, cv2.COLOR_BGR2RGB);\n",
+    "#file = cv2.cvtColor(file, cv2.COLOR_BGR2RGB);\n",
     "file.shape\n",
     "resized = cv2.resize(file, (32,32))\n",
     "resized = resized/255.0-0.5\n",
